--- a/snmpconfig.yml
+++ b/snmpconfig.yml
@@ -2,10 +2,13 @@
 - name: snmp ro/rw string configuration
   hosts: switches
   gather_facts: no
+  vars:
+    ro-com: rocom
+    rw-com: rwcom
 
   tasks:
     - name: ensure snmp strings are present
       ios_config:
         lines:
-          - snmp-server community rocom RO
-          - snmp-server community rwcom RW
+          - snmp-server community {{ ro-com }} RO
+          - snmp-server community {{ rw-com }} RW
